--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,9 @@ dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "types-requests"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+lint.select = ["E", "F", "I"]
+lint.ignore = ["E501"]
