Added some cache directories to the .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-# Python cache
-__pycache__/
-*.py[cod]
-
 # Virtual environments
 .venv/
 env/
 venv/
+
+# Python cache
+__pycache__/
+*.py[cod]
+.mypy_cache/
+.ruff_cache/
 
 # Test cache
 .pytest_cache/
